# SimpleNotepad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean-all.cmd  clean.cmd  readme.md
.github/workflows/: cmake-build.yml
include/: config.h  dlgabout.h  example.txt  exception.h  ids.h  utils.h
libs/: CMakeLists.txt
libs/discord/: CMakeLists.txt
libs/discord/src/: CMakeLists.txt
libs/libpng/: CMakeLists.txt
libs/zlib/: CMakeLists.txt  zconf.h  zconf.h.cmakein
libs/zlib/.github/workflows/: cmake.yml  configure.yml
res/: resources.rc
src/: dlgabout.c  exception.c  main.c  utils.c
